--- a/graph-cli/Cargo.toml
+++ b/graph-cli/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-near-jsonrpc-client = { git = "https://github.com/near/nearcore", rev="6f2a290227f4f3b41c543b615231e769e438e28c" }
-near-jsonrpc-primitives = { git = "https://github.com/near/nearcore", rev="6f2a290227f4f3b41c543b615231e769e438e28c" }
+near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs.git", rev = "538b6c9fa627715b578b36cac7ff33c5410ef1d6" }
+near-jsonrpc-primitives = "0.10.0"
+near-crypto = "0.10.0"
+near-primitives = "0.10.0"
+tokio = { version = "1", features = ["macros"] }
+serde_json = "1.0.66"
