--- a/graph-cli/Cargo.toml
+++ b/graph-cli/Cargo.toml
@@ -11,6 +11,7 @@ near-jsonrpc-primitives = "0.10.0"
 near-crypto = "0.10.0"
 near-primitives = "0.10.0"
 tokio = { version = "1", features = ["macros"] }
+serde = "1.0.131"
 serde_json = "1.0.66"
 
 petgraph = "0.6"
